[package]
name = "ban-shadow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
pollster = "0.4.0"
raw-window-handle = "0.6.2"
wgpu = "28.0.0"
windows-capture = "1.5.0"
winit = "0.30.12"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
]
